# Group_02_ACO

./: README.md  config.py  git_integration_steps.md  main.py  pyproject.toml  requirements.txt
config/: default.yaml  multiday.yaml
data/: data.csv
data/demo/: markets.json  travel_times.json
data/real/: markets.json  travel_times.json
modules/: coordinates.py  market_data.py  travel_times.py
notebooks/: analysis.ipynb
src/: __init__.py  main.py
src/models/: __init__.py  aco.py  data_structures.py  greedy.py
src/utils/: __init__.py
src/visualization/: __init__.py  plotter.py
tests/: test_data_structures.py
