[tool.poetry]
name = "vienna-christmas-market-optimizer"
version = "0.1.0"
description = "ACO-based optimization for Vienna Christmas market visiting with time constraints"
authors = ["Group 02 - Seidel Rally Vienna ACO"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
networkx = "^3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.14.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"

[tool.poetry.group.geo]
optional = true

[tool.poetry.group.geo.dependencies]
folium = "^0.14.0"
geopandas = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
ipython = "^8.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.2.0"

[tool.poetry.scripts]
optimize = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
